--- a/MKStoreKitConfigs.plist
+++ b/MKStoreKitConfigs.plist
@@ -2,24 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>Consumables</key>
-	<dict>
-		<key>com.mugunthkumar.inappsubtest.consumable1</key>
-		<dict>
-			<key>Count</key>
-			<integer>500</integer>
-			<key>Name</key>
-			<string>EggBasket</string>
-		</dict>
-	</dict>
 	<key>Non-Consumables</key>
 	<array>
-		<string>com.mugunthkumar.inappsubtest.nonconsumable</string>
+		<string>A638CD3A8CF145C0A788837F0171E29B</string>
 	</array>
-	<key>Subscriptions</key>
-	<dict>
-		<key>com.mugunthkumar.subinapptest.wk1</key>
-		<integer>7</integer>
-	</dict>
 </dict>
 </plist>
