--- a/MKStoreKitConfigs.plist
+++ b/MKStoreKitConfigs.plist
@@ -4,7 +4,9 @@
 <dict>
 	<key>Non-Consumables</key>
 	<array>
+		<string>ba8312e873e311e1a3e9270f8ad49603</string>
 		<string>d76405b26d5711e180191f0550d5836d</string>
+		<string>a671f3c873e311e1980dd7b848481ea9</string>
 		<string>e4a3c0fe6d5811e1aad29f4f502097ba</string>
 	</array>
 </dict>
