back to test purchases

--- a/MKStoreKitConfigs.plist
+++ b/MKStoreKitConfigs.plist
@@ -4,7 +4,10 @@
 <dict>
 	<key>Non-Consumables</key>
 	<array>
-		<string>9780307942968</string>
+		<string>IAP_TEST_SPANISH</string>
+		<string>IAP_TEST_SPANISH_ESSENTIAL</string>
+		<string>IAP_TEST_SPANISH_INTERMEDIATE_ADVANCED</string>
+		<string>IAP_TEST_SPANISH_ADVANCED_LAST_TWO</string>
 	</array>
 </dict>
 </plist>
